fix links to assets

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="css/resume.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/resume/css/reset-fonts-grids.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/resume/css/resume.css" media="all" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:thin,extralight,light,normal,bold,bolditalic,extrabold">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 
@@ -37,7 +37,7 @@
 
             <div class="yui-u">
               <div class="contact-info">
-                <h3><a style="background-color: rgb(85, 64, 175)" id="pdf" href="downloads/radler-resume.pdf">Download PDF</a></h3>
+                <h3><a style="background-color: rgb(85, 64, 175)" id="pdf" href="/resume/downloads/radler-resume.pdf">Download PDF</a></h3>
                 <h3><a href="mailto:ben@benradler.com">ben@benradler.com</a></h3>
                 <h3>415-886-7119</h3>
               </div><!--// .contact-info -->
