--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -59,7 +59,7 @@
                     <a href='https://www.amazon.com/Extreme-Programming-Explained-Embrace-Change/dp/0321278658'>Extreme Programming</a>,
                     <a href='https://git-scm.com/'>Git</a>,
                     <a href='https://www.jetbrains.com/'>Jetbrains</a>, and
-                    <a href='http://www.dearadobe.com/top_rated.php'>Adobe CC</a> are some favorite tools in my toolbox.
+                    <a href='https://web.archive.org/web/20201109021757/http://www.dearadobe.com/top_rated.php'>Adobe CC</a> are some favorite tools in my toolbox.
                   </p>
                   <br/>
                   <p class="enlarge">
