--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -63,10 +63,10 @@
                   </p>
                   <br/>
                   <p class="enlarge">
-                    In my spare time
-                    <a href='https://youtu.be/ys2KHTwrVEw?t=762'>I build and race FPV quadcopters</a>,
-                    <a href='http://instagram.com/streetfauxtography'>take photos</a> and
+                    In my spare time I
+                    <a href='https://benradler.com/photography'>take photos</a> and
                     <a href='https://www.youtube.com/watch?v=Mdk78fR0ihw'>videos</a>,
+                    <a href='https://youtu.be/ys2KHTwrVEw?t=762'>build and race FPV quadcopters</a>,
                     <a href='http://benradler.com/blog/2015/02/25/where-i-ve-been-since-november-2014-aka-breaking-your-femur-101'>bike around (and break my leg)</a>,
                     <a href='http://benradler.com/blog/2014/05/10/diy-philips-hue-style-led-lights-with-node-js-backbone'>hack stuff</a>, and relax.
                     Sometimes I contribute to
@@ -186,7 +186,7 @@
                     </ul>
                   </div>
 
-                  <div class="job">
+                  <!-- <div class="job">
                     <h2>Boombotix</h2>
                     <h3>Chief Technology Officer</h3>
                     <h4>September 2011 - May 2014</h4>
@@ -226,7 +226,7 @@
                       <a href="http://med-rest.com/">Mediterraneo</a>.
                       I learned a ton about client/business interactions, and how to build scalable websites for moderate traffic.
                     </p>
-                  </div>
+                  </div> -->
 
                 </div><!--// .yui-u -->
               </div><!--// .yui-gf -->
@@ -255,7 +255,7 @@
                   <div class="job">
                     <h2><a href="http://onelogin.com">Onelogin.com</a></h2>
                     <h3>Ruby on Rails, Node.js + Express</h3>
-                    <p>Lead engineer and architect on Rails and Node.js service oriented architecture.</p>
+                    <p>Senior engineer on Rails monolith and Node.js microservices.</p>
                   </div>
 
                   <div class="job">
@@ -276,16 +276,16 @@
                     <p>Built shopping cart platform based on Spree.  Integrated, tested, and iterated using Optimizely A/B testing platform, and Clicktale heatmap/click tracking platform.  Increased ecommerce conversion rate and revenue by over 2x in 2012.</p>
                   </div>
 
-                  <div class="job">
+                  <!-- <div class="job">
                     <h2><a href="http://snip.it">Snip.it</a></h2>
                     <h3>Ruby on Rails Full Stack</h3>
                     <p>UPDATE: Snip.it announced they were acquired by Yahoo on January 22, 2013.  As such, the site is no longer available for viewing. Sorry!</p>
-                  </div>
+                  </div> -->
 
                  <div class="job last">
                     <h2><a href="http://benradler.com">benradler.com</a></h2>
-                    <h3>Rails 6</h3>
-                    <p>This is my personal blog where I discuss whatever the heck I want. Content often covers coding, photography, and hacking. It runs on a hand-rolled Rails application, deployed on Heroku.</p>
+                    <h3>Rails 7</h3>
+                    <p>This is my personal website where I discuss whatever the heck I want. Content often covers coding, photography, and hacking. It runs on a hand-rolled Rails application, deployed on Heroku.</p>
                   </div>
 
                 </div><!--// .yui-u -->
