Add AT blog post

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -239,6 +239,13 @@
 
                 <div class="yui-u">
 
+
+                  <div class="job">
+                    <h2><a href="https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-4-gating-deploys-with-automated-acceptance-4417e0ebc274">Lyft Engineering Blog Post - Acceptance Testing</a></h2>
+                    <h3>Gating Deploys with Automated Acceptance Tests</h3>
+                    <p>A Blog Post I authored covering the Acceptance Testing Framework I helped develop and maintain at Lyft.</p>
+                  </div>
+
                   <div class="job">
                     <h2><a href="https://apps.apple.com/us/app/squarecrusher/id1518515040">SquareCrusher!</a></h2>
                     <h3>Swift + SpriteKit</h3>
