--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -176,7 +176,7 @@
                     <ul>
                       <p></p>
                       <li><strong>Role</strong></li>
-                      <p>Led 6 person engineering team for Commerce team.</p>
+                      <p>Full Stack Software Engineer</p>
                       <li><strong>Achievements</strong></li>
                       <p>Helped design and implement a plan to move off of a Rails 2.3/Ruby 1.8.7 application and into a (modern at the time) Node.js and Rails 4 service oriented architecture (re-building the plane while it flies). I simultaneously played a key role in developing an interim solution that allowed for zero-downtime on our end-user dashboard, using read-only replica slave databases and RabbitMQ.</p>
                       <p>Led development on the <strong><a href='https://www.pentio.com/onelogin/resources/data/wp-onelogin-napps-a-game-changer-for-mobile-sso.pdf'>NAPPS</a></strong> infrastructure that will power OneLogin's Native Mobile Application single-sign-on platform for years to come. I implemented an OAuth 2.0 Identity Provider, a Device Management Service, and a high-throughput token generation service.</p>
