--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -144,7 +144,7 @@
                       <p>Simulatedrides provides weekly production load tests for peak event preparation, driving traffic up to 7000 ride dropoffs per minute and adding hundreds of thousands of "simulated" users into Lyft systems.</p>
                       <p>Simulatedrides generates network traffic 24/7/365 in Staging the environment, offering realistic pre-production load to dozens of teams and hundreds of services across Lyft.</p>
                       <li><strong>Acceptance Test Framework</strong></li>
-                      <p>Developed <a href="https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-4-gating-deploys-with-automated-acceptance-4417e0ebc274">"Acceptance Test Framework"</a> which runs highly reliable and easy-to-write end to end tests which gate deployments into production.</p>
+                      <p>Developed <a href="https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-4-gating-deploys-with-automated-acceptance-4417e0ebc274">"Acceptance Test Framework"</a> which runs highly reliable and easy-to-write end-to-end tests which gate deployments into production.</p>
                       <p>Leverages Python's <a href="https://docs.python.org/3/library/asyncio.html">asyncio library</a> and AWS SQS for a simple yet highly scalable worker model which executes thousands of tests in parallel with no effect on deploy bake SLAs.</p>
                     </ul>
                   </div>
@@ -163,8 +163,8 @@
                       <p>Implemented <strong>Rush My Order</strong> "immediate fulfillment" feature. Allowed a buyer to pay a $5.99 charge to have their order printed within 24 hours and shipped expedited. Resulted in approximately 5000 units/day increase in sales.</p>
                       <p>Built <strong>Print Partner API</strong> offering outsourced print partners to integrate easily with Teespring for fulfillment. Through this feature, Teespring expanded into additional merchandise categories such as mugs and totes, ultimately launching a new product every 2 weeks in 2017.</p>
                       <p>Worked on <strong>Shopping Cart</strong>, allowing buyers to purchase from multiple campaigns with a single checkout. Increased daily gross merchandise value by 10% and average basket size by 20%.</p>
-                      <p>Implemented <strong>Split Jobs</strong>, allowing fulfillment of different product types to be handled by different print partners. For example, a sticker can be fulfilled by a different printer than a t-shirt, all for the same buyer.</p>
-                      <p>Led various <strong>engineering-efficiency</strong> related efforts, such as improving CI speed, reducing flaky tests, and introducing "review apps" as staging environments for each pull request.</p>
+                      <p>Implemented <strong>Split Jobs</strong>, allowing the fulfillment of different product types to be handled by different print partners. For example, a sticker can be fulfilled by a different printer than a t-shirt, all for the same buyer.</p>
+                      <p>Led various <strong>engineering-efficiency</strong>-related efforts, such as improving CI speed, reducing flaky tests, and introducing "review apps" as staging environments for each pull request.</p>
                     </ul>
                   </div>
 
@@ -178,10 +178,10 @@
                       <li><strong>Role</strong></li>
                       <p>Full Stack Software Engineer</p>
                       <li><strong>Achievements</strong></li>
-                      <p>Helped design and implement a plan to move off of a Rails 2.3/Ruby 1.8.7 application and into a (modern at the time) Node.js and Rails 4 service oriented architecture (re-building the plane while it flies). I simultaneously played a key role in developing an interim solution that allowed for zero-downtime on our end-user dashboard, using read-only replica slave databases and RabbitMQ.</p>
+                      <p>Helped design and implement a plan to move off of a Rails 2.3/Ruby 1.8.7 application and into a (modern at the time) Node.js and Rails 4 service-oriented architecture (re-building the plane while it flies). I simultaneously played a key role in developing an interim solution that allowed for zero downtime on our end-user dashboard, using read-only replica slave databases and RabbitMQ.</p>
                       <p>Led development on the <strong><a href='https://www.pentio.com/onelogin/resources/data/wp-onelogin-napps-a-game-changer-for-mobile-sso.pdf'>NAPPS</a></strong> infrastructure that will power OneLogin's Native Mobile Application single-sign-on platform for years to come. I implemented an OAuth 2.0 Identity Provider, a Device Management Service, and a high-throughput token generation service.</p>
                       <p>Built a <strong>Software Security Module (SSM)</strong> using <a href='http://www.ruby-doc.org/stdlib-2.1.2/libdoc/drb/rdoc/DRb.html'>distributed Ruby (dRb)</a>. The SSM securely stores master/private keys such that no other service has direct access to them. I worked to identify and patch SQLI, XSS, timing attacks, and other Rails vulnerabilities, as well as improve app security based on quarterly iSEC audits.</p>
-                      <p>Helped maintain and implement our <strong><a href='http://github.com/onelogin/ruby-saml'>open source SAML toolkits</a></strong>. I helped build and deploy the first major update to <a href='http://onelogin.com'>OneLogin's SSO App UI</a> on Twitter Bootstrap and an in-house AJAXY framework like Turbolinks.</p>
+                      <p>Helped maintain and implement our <strong><a href='http://github.com/onelogin/ruby-saml'>open-source SAML toolkits</a></strong>. I helped build and deploy the first major update to <a href='http://onelogin.com'>OneLogin's SSO App UI</a> on Twitter Bootstrap and an in-house AJAXY framework like Turbolinks.</p>
                       <p>Developed the hiring process for engineering, including general screening, and technical interviews; helped build "authentication" and "core" teams.</p>
                     </ul>
                   </div>
