--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -142,7 +142,7 @@
                       <li><strong>Simulatedrides Platform</strong></li>
                       <p>Developed <strong>Simulatedrides</strong> platform built on Python's <a href="https://docs.python.org/3/library/asyncio.html">asyncio library</a>. This critical piece of reliability infrastructure injects "simulated" users into the staging and production Lyft systems to mimic iOS/Android native clients.</p>
                       <p>Simulatedrides provides weekly production load tests for peak event preparation, driving traffic up to 7000 ride dropoffs per minute and adding hundreds of thousands of "simulated" users into Lyft systems.</p>
-                      <p>Simulatedrides generates network traffic 24/7/365 in Staging the environment, offering realistic pre-production load to dozens of teams and hundreds of services across Lyft.</p>
+                      <p>Simulatedrides generates network traffic 24/7/365 in the Staging environment, offering realistic pre-production load to dozens of teams and hundreds of services across Lyft.</p>
                       <li><strong>Acceptance Test Framework</strong></li>
                       <p>Developed <a href="https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-4-gating-deploys-with-automated-acceptance-4417e0ebc274">"Acceptance Test Framework"</a> which runs highly reliable and easy-to-write end-to-end tests which gate deployments into production.</p>
                       <p>Leverages Python's <a href="https://docs.python.org/3/library/asyncio.html">asyncio library</a> and AWS SQS for a simple yet highly scalable worker model which executes thousands of tests in parallel with no effect on deploy bake SLAs.</p>
