--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="yui-u">
                   <p class="enlarge">
-                    I'm a hacker living in California. I write Ruby, Python, and Javascript. Learning and Making Things are my driving forces.
+                    I'm a hacker living near San Diego, California. I write Ruby, Python, and Javascript. Learning and Making Things are my driving forces.
                     <a href='https://www.amazon.com/Extreme-Programming-Explained-Embrace-Change/dp/0321278658'>Extreme Programming</a>,
                     <a href='https://git-scm.com/'>Git</a>,
                     <a href='https://www.jetbrains.com/'>Jetbrains</a>, and
