Add ATS friendly resume

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -38,6 +38,7 @@
             <div class="yui-u">
               <div class="contact-info">
                 <h3><a style="background-color: rgb(85, 64, 175)" id="pdf" href="/resume/downloads/radler-resume.pdf">Download PDF</a></h3>
+                <h3><a style="background-color: rgb(85, 64, 175)" id="pdf" href="https://docs.google.com/document/d/1j8uZ5G3rY1xxy1xJERt3SFhwicP7zzDTdofY8hLLmM0/edit#heading=h.ehjavpudlfsy">ATS Friendly Resume</a></h3>
                 <h3><a href="mailto:ben@benradler.com">ben@benradler.com</a></h3>
                 <h3>805-551-9129</h3>
               </div><!--// .contact-info -->
