minor resume updates

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -54,13 +54,14 @@
                 <div class="yui-u first">
                   <h2 class="larger uppercase">About Me</h2>
                 </div>
+
                 <div class="yui-u">
                   <p class="enlarge">
-                    I'm a hacker living near San Diego, California. I write Ruby, Python, and Javascript. Learning and Making Things are my driving forces.
+                    I'm a software engineer living near San Diego, California. I write Ruby, Python, and Javascript. Learning and making things are my driving forces.
                     <a href='https://www.amazon.com/Extreme-Programming-Explained-Embrace-Change/dp/0321278658'>Extreme Programming</a>,
                     <a href='https://git-scm.com/'>Git</a>,
-                    <a href='https://www.jetbrains.com/'>Jetbrains</a>, and
-                    <a href='https://web.archive.org/web/20201109021757/http://www.dearadobe.com/top_rated.php'>Adobe CC</a> are some favorite tools in my toolbox.
+                    <a href='https://code.visualstudio.com/'>VSCode</a>, and
+                    <a href='https://web.archive.org/web/20201109021757/http://www.dearadobe.com/top_rated.php'>Adobe CC</a> are my favorite tools in my toolbox.
                   </p>
                   <br/>
                   <p class="enlarge">
