--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -85,12 +85,12 @@
 
                     <div class="talent">
                       <h2 class="gray">Development</h2>
-                      <p>I design &amp; implement Ruby, Python, and Typescript services from the ground up. I iterate and bugfix based on data and metrics gathered from ELK and statsd. I code with a pragmatic test-first philosophy, resulting in idiomatic DRY code that complies with linters, and raises test coverage.</p>
+                      <p>I design &amp; build Ruby, Python, and TypeScript services, iterate using data from ELK and statsd, and write clean, test-driven code that meets standards and ensures high coverage.</p>
                     </div>
 
                     <div class="talent">
                       <h2 class="gray">Design</h2>
-                      <p>ReactJS, TailwindCSS, and Bootstrap are my frontend lifelines. I've earned the nickname Mr. Pixel. I'm as meticulous as I am minimal. Nothing makes me happier than good use of whitespace, symmetrical lines, and responsive layouts.</p>
+                      <p>ReactJS and TailwindCSS are my go-to tools for crafting clean, responsive, and symmetrical layouts. I value minimalism, effective whitespace, and attention to detail in every design.</p>
                     </div>
 
                     <div class="talent">
@@ -106,18 +106,18 @@
                 </div>
                 <div class="yui-u">
                   <ul class="talent">
-                    <li>Ruby: Rails, Sinatra, Rack</li>
-                    <li>Terminal: <pre style="display: inline;">git, zsh</pre></li>
+                    <li>Ruby: Rails, Sinatra</li>
+                    <li>Terminal: <pre style="display: inline;">git, zsh, brew</pre></li>
                     <li class="last"></li>
                   </ul>
 
                   <ul class="talent">
                     <li>Python: Flask, asyncio</li>
-                    <li class="last"></li>
+                    <li>Dev: <pre style="display: inline;">vscode, docker, k8s</pre></li>
                   </ul>
 
                   <ul class="talent">
-                    <li>Javascript: ReactJS, Redux</li>
+                    <li>Typescript: React, Redux</li>
                     <li class="last"></li>
                   </ul>
                 </div>
@@ -139,16 +139,15 @@
                     <ul>
                       <p></p>
                       <li><strong>Role</strong></li>
-                      <p>Senior Engineer on Dispatch & Test Platforms Teams, with a focus on Cruise-wide performance projects.</p>
+                      <p>Senior Engineer Test Platform Team, with a focus on Cruise-wide testing and performance projects.</p>
                       <li><strong>K6 Load Testing</strong></li>
-                      <p>Led adoption of <strong>K6</strong> as Cruise-wide load testing platform.</p>
-                      <p>Worked with Ridehail, Fleet, Delivery teams to develop unified load test scenarios to scale Cruise to over 2000 concurrent autonomous vehicles on the road.</p>
-                      <li><strong>End to End Testing</strong></li>
-                      <p>Led implementation of <strong>End To End Tests</strong> for Dispatch Team.</p>
-                      <p>Authored end to end tests of several critical business flows which increase developer confidence and unlock rapid feedback during creation of new features.</p>
+                      <p>Led adoption of <strong>Grafana K6</strong> as Cruise-wide load testing platform.</p>
+                      <p>Worked with all of Product Engineering, including <strong>Ridehail, Fleet, and Delivery</strong> teams to develop unified load test scenarios to scale Cruise to over 2000 concurrent autonomous vehicles on the road.</p>
+                      <li><strong>AV Bots &amp; Virtual AVs</strong></li>
+                      <p>Built test vehicles called <strong>AV Bots</strong> which were used in place of real vehicles for end-to-end and load testing.</p>
+                      <p>Led implementation of <strong>Virtual AVs</strong>, high fidelity test vehicle "bots" which enabled end-to-end testing of cloud services, the mobile ridehail app, and in car experience tablet together.</p>
                     </ul>
                   </div>
-
 
                   <div class="job">
                     <h2>Lyft</h2>
@@ -259,7 +258,6 @@
 
                 <div class="yui-u">
 
-
                   <div class="job">
                     <h2><a href="https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-4-gating-deploys-with-automated-acceptance-4417e0ebc274">Lyft Engineering Blog Post - Acceptance Testing</a></h2>
                     <h3>Gating Deploys with Automated Acceptance Tests</h3>
@@ -356,6 +354,5 @@
       ga('send', 'pageview');
 
     </script>
-
   </body>
 </html>
